# Vector-Engine

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: compare_bruteforce_vs_faiss.py
demo_repo_template/: README.md  requirements.txt
docs/: api.md  api_stability.md  backends.md  concepts.md  credibility_audit.md  integration_guides.md  kpi_charter.md  limitations.md  reproducibility.md  research_claims.md  use_cases.md
examples/: cohort_eval_workflow.py  hard_negative_training_batch.py  minimal_rag_integration.py
notebooks/: 01_semantic_search.ipynb  02_knn_baseline.ipynb  03_recommender_similarity.ipynb  04_stability_runs.ipynb
requirements/: constraints-macos-arm64-py312.txt
scripts/: artifact_contracts.py  benchmark_matrix.py  build_release_bundle.py  credibility_audit.py  datasets.py  env_diagnostics.py  ingest_dataset.py  matrix_profile_advisor.py  performance_gates.py  profile_local.py  publishable_results.py  rag_baseline.py  rag_real_corpus_eval.py  repro_smoke.py  stability_runs.py
tests/: conftest.py  test_api_stability.py  test_artifact_contracts.py  test_core.py  test_credibility_audit.py  test_dataset_benchmark_tooling.py  test_env_diagnostics.py  test_eval_surface_v1.py  test_faiss_optional.py  test_hardening.py  test_ingest_pipeline.py  test_install_smoke.py  test_matrix_profile_advisor.py  test_ml_eval.py  test_perf_smoke.py  test_persistence_compat.py  test_profile_local.py  test_rag_reliability.py  test_real_corpus_eval.py  test_release_bundle.py  test_release_performance_workflow.py  test_v02_features.py
(+31 files in other folders)
