[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-engine"
version = "1.0.0"
description = "ML-first vector computation and retrieval engine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Neel Panchal" }
]
dependencies = [
  "numpy>=1.26.4,<2.0",
]

[project.optional-dependencies]
faiss = [
  "faiss-cpu>=1.7.4; platform_system != 'Darwin' or platform_machine != 'arm64'",
]
ml = [
  "scikit-learn>=1.4,<1.7",
]
dev = [
  "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vector_engine*"]
